--- a/package.json
+++ b/package.json
@@ -23,11 +23,15 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint --max-warnings 0 --cache .",
+    "lint:fix": "npm run lint -- --fix"
   },
   "devDependencies": {
     "typescript": "^4.9.3",
-    "vite": "^4.1.0"
+    "vite": "^4.1.0",
+    "eslint": "8.27.0",
+    "@getresponse/eslint-config": "7.1.9"
   },
   "dependencies": {
     "pathe": "^1.1.0",
